{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 27,
  "lineage": "67d7a1c2-5a15-c102-73c5-7ad72680924b",
  "resources": [
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg-001",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304884398026:security-group/sg-082ddd4fb23f01b49",
            "description": "security group for route 53",
            "egress": [],
            "id": "sg-082ddd4fb23f01b49",
            "ingress": [],
            "name": "route53-sg",
            "name_prefix": "",
            "owner_id": "304884398026",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd2b7c96374a77cd"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sgo-001",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304884398026:security-group-rule/sgr-0ce4d8b332fb1d6af",
            "cidr_ipv4": "10.130.10.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 53,
            "id": "sgr-0ce4d8b332fb1d6af",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-082ddd4fb23f01b49",
            "security_group_rule_id": "sgr-0ce4d8b332fb1d6af",
            "tags": null,
            "tags_all": {},
            "to_port": 53
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.securitygroup"
          ]
        },
        {
          "index_key": "sgo-002",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304884398026:security-group-rule/sgr-0bdb12e7311eaadc7",
            "cidr_ipv4": "10.130.20.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 53,
            "id": "sgr-0bdb12e7311eaadc7",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-082ddd4fb23f01b49",
            "security_group_rule_id": "sgr-0bdb12e7311eaadc7",
            "tags": null,
            "tags_all": {},
            "to_port": 53
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.securitygroup"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sgi-001",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304884398026:security-group-rule/sgr-084e7a37ce7beac8c",
            "cidr_ipv4": "10.130.10.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 53,
            "id": "sgr-084e7a37ce7beac8c",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-082ddd4fb23f01b49",
            "security_group_rule_id": "sgr-084e7a37ce7beac8c",
            "tags": null,
            "tags_all": {},
            "to_port": 53
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.securitygroup"
          ]
        },
        {
          "index_key": "sgi-002",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304884398026:security-group-rule/sgr-0b4577646410fbbe6",
            "cidr_ipv4": "10.130.20.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 53,
            "id": "sgr-0b4577646410fbbe6",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-082ddd4fb23f01b49",
            "security_group_rule_id": "sgr-0b4577646410fbbe6",
            "tags": null,
            "tags_all": {},
            "to_port": 53
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.securitygroup"
          ]
        }
      ]
    }
  ]
}